Inline comments not allowed

--- a/template/.gitignore
+++ b/template/.gitignore
@@ -7,7 +7,8 @@
 # *
 # * Changes here will be overwritten by Copier; NEVER EDIT MANUALLY
 
-.vscode/*  # need "*" to allow negations in .vscode/.gitignore
+# need "*" to allow negations in .vscode/.gitignore
+.vscode/*
 *.rej
 package.json
 #[[
