--- a/template/.vscode/settings.json
+++ b/template/.vscode/settings.json
@@ -2,20 +2,6 @@
   // * -------------------------------------------------------------------------- * //
   // * PROJECT-SPECIFIC SETTINGS * //
 
-  //! Experimental File Nesting
-  "explorer.experimental.fileNesting.enabled": true,
-  "explorer.experimental.fileNesting.expand": false,
-  "explorer.experimental.fileNesting.operateAsGroup": true,
-  "explorer.experimental.fileNesting.patterns": {
-    "*.ts": "${capture}.js",
-    "*.js": "${capture}.js.map, ${capture}.min.js, ${capture}.d.ts",
-    "*.jsx": "${capture}.js",
-    "*.tsx": "${capture}.ts",
-    "tsconfig.json": "tsconfig.*.json",
-    "package.json": "package-lock.json, yarn.lock",
-    "_tooling": ".coveragerc, .env, .flake8, .gitattributes, package.json, pyrightconfig.json, pytest.ini, .pytest_cache"
-  },
-
   //! Extension: Pylance
   //* Pylance settings aren't very discoverable.
   //* https://marketplace.visualstudio.com/items?itemName=ms-python.vscode-pylance
@@ -151,6 +137,30 @@
 
   //* Format on save. Adjust CTRL+[SHIFT/ALT]+S in "keybindings.json" as well
   "editor.formatOnSave": true,
+
+  //* Experimental File Nesting
+  "explorer.experimental.fileNesting.enabled": true,
+  "explorer.experimental.fileNesting.expand": false,
+  "explorer.experimental.fileNesting.operateAsGroup": true,
+  "explorer.experimental.fileNesting.patterns": {
+    "*.ts": "${capture}.js",
+    "*.js": "${capture}.js.map, ${capture}.min.js, ${capture}.d.ts",
+    "*.jsx": "${capture}.js",
+    "*.tsx": "${capture}.ts",
+    "tsconfig.json": "tsconfig.*.json",
+    "package.json": "package-lock.json, yarn.lock",
+    "_tooling": ".coveragerc, .env, .flake8, .gitattributes, package.json, pyrightconfig.json, pytest.ini, .pytest_cache"
+  },
+
+  //* Custom file associations
+  "files.associations": {
+    ".coveragerc": "ini",
+    ".env": "dotenv",
+    ".pylintrc": "ini",
+    "pyrightconfig.json": "jsonc",
+    "*requirements*.txt": "pip-requirements",
+    "_tooling": "plaintext"
+  },
 
   //* Enforce whitespace and newlines.
   //? Automatically enforce whitespace conventions.
