--- a/copier.yml
+++ b/copier.yml
@@ -117,7 +117,7 @@ override_pytest:
 # * -------------------------------------------------------------------------------- # *
 
 _skip_if_exists:
-  - .gitignore
+  - ./.gitignore
   - CHANGELOG.md
   - LICENSE
   - pyproject.toml
