--- a/copier.yml
+++ b/copier.yml
@@ -127,4 +127,4 @@ _skip_if_exists:
   - "./src/{{ project_name }}/__init__.py"
 
 _tasks:
-  - [py, "-{{ python_version }}", tooling/scripts/merge_gitignore.py]
+  - [pwsh, tooling/scripts/merge_gitignore.ps1]
