Add a task, modify gitignore

--- a/template/.gitignore
+++ b/template/.gitignore
@@ -1,9 +1,9 @@
 # * -------------------------------------------------------------------------------- * #
-# * PROJECT-SPECIFIC GITIGNORE
+# * PROJECT-SPECIFIC
 
 
 # * -------------------------------------------------------------------------------- * #
-# * TEMPLATE GITIGNORE
+# * TEMPLATE
 # *
 # * Changes here will be overwritten by Copier; NEVER EDIT MANUALLY
 
