--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,8 @@
-/.vscode
+# * -------------------------------------------------------------------------------- * #
+# * PROJECT-SPECIFIC
+
+/.vscode/*
+!/.vscode/.gitignore
 
 # * -------------------------------------------------------------------------------- * #
 # * https://raw.githubusercontent.com/github/gitignore/master/Python.gitignore
