--- a/dependabot/.github/workflows/publish.yml
+++ b/dependabot/.github/workflows/publish.yml
@@ -12,7 +12,7 @@ jobs:
       - uses: actions/setup-python@v3
         with:
           python-version: "{{ python_version }}"
-      - run: bash tooling/cicd_setup.sh
+      - run: bash .tooling/cicd_setup.sh
       - name: publish
         env:
           FLIT_USERNAME: __token__
