Put nests before files

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,5 +1,6 @@
 {
   //* Experimental File Nesting
+  "explorer.sortOrder": "foldersNestsFiles",
   "explorer.experimental.fileNesting.enabled": true,
   "explorer.experimental.fileNesting.expand": false,
   "explorer.experimental.fileNesting.operateAsGroup": false,
