Associate filename-templated Jinja JSON files w/ JSON with Comments

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -22,6 +22,7 @@
     ".pylintrc": "ini",
     "pyrightconfig.json": "jsonc",
     "*requirements*.txt": "pip-requirements",
-    ".nest_*": "plaintext"
+    ".nest_*": "plaintext",
+    "*.json*.jinja": "jsonc"
   }
 }
