--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -11,7 +11,7 @@
     "*.tsx": "${capture}.ts",
     "tsconfig.json": "tsconfig.*.json",
     "package.json": "package-lock.json, yarn.lock",
-    ".nest_tooling": "{{ _copier_conf.answers_file }}.jinja, *{% endif %}.jinja, package.json",
+    ".nest_tooling": "pythonrc.py, {{ _copier_conf.answers_file }}.jinja, *{% endif %}.jinja, package.json",
     ".nest_markdown": "*.md, *.md.jinja, LICENSE.jinja"
   },
 
