--- a/template/.tooling/requirements/requirements_both.txt
+++ b/template/.tooling/requirements/requirements_both.txt
@@ -5,15 +5,7 @@ toml~=0.10.2
 flit~=3.7
 
 # Lint
-flake8~=4.0
-flake8-absolute-import~=1.0
-flake8-bandit~=3.0
-flake8-black~=0.3
-flake8-builtins~=1.5
-flake8-bugbear~=22.3
-flake8-comprehensions~=3.8
-flake8-fixme~=1.1
-pep8-naming~=0.12
+flake8-noqa~=1.2.1
 
 # Test
 pytest~=7.1
