Update approximate pins to bugfix semver specifier

--- a/template/.tooling/requirements/requirements_dev.txt
+++ b/template/.tooling/requirements/requirements_dev.txt
@@ -1,15 +1,15 @@
 # Experiment
-jupyter~=1.0
+jupyter~=1.0.0
 nbstripout~=0.5.0
 
 # For `python` and `ipython` via `pythonrc.py`
 rich~=12.2.0
 
 # Format
-black==22.3.0  # doesn't follow semver
+black~=22.3.0  # doesn't follow semver
 
 # Lint
-flake8-codes~=0.2  # flake8 error code introspection
+flake8-codes~=0.2.0  # flake8 error code introspection
 
 # For local publishing to PyPi with flit
 keyring~=23.5.0
