--- a/template/.tooling/requirements/requirements_both.txt
+++ b/template/.tooling/requirements/requirements_both.txt
@@ -2,11 +2,20 @@
 toml~=0.10.2
 
 # Build
-flit~=3.7
+flit~=3.7.1
 
 # Lint
+flake8~=4.0.1
+flake8-absolute-import~=1.0.0.1
+flake8-bandit~=3.0.0
+flake8-black~=0.3.2
+flake8-builtins~=1.5.3
+flake8-bugbear~=22.3.23
+flake8-comprehensions~=3.8.0
+flake8-fixme~=1.1.1
 flake8-noqa~=1.2.1
+pep8-naming~=0.12.1
 
 # Test
-pytest~=7.1
-pytest-cov~=3.0
+pytest~=7.1.1
+pytest-cov~=3.0.0
