--- a/dependabot/.github/workflows/bump.yml
+++ b/dependabot/.github/workflows/bump.yml
@@ -14,8 +14,8 @@ jobs:
       - uses: actions/setup-python@v3
         with:
           python-version: "{{ python_version }}"
-      - run: bash .tooling/setup/cicd_setup.sh
-      - run: python .tooling/scripts/bump_pyproject.py
+      - run: bash .tools/cicd_setup.sh
+      - run: python .tools/scripts/bump_pyproject.py
       - uses: stefanzweifel/git-auto-commit-action@v4.14.0
         with:
           commit_message: Bump `pyproject.toml` dependencies
