--- a/dependabot/.github/workflows/main.yml
+++ b/dependabot/.github/workflows/main.yml
@@ -15,7 +15,7 @@ jobs:
       - uses: actions/setup-python@v3
         with:
           python-version: "{{ python_version }}"
-      - run: bash .tooling/setup/cicd_setup.sh
+      - run: bash .tools/cicd_setup.sh
       - run: flake8 -v --config .flake8
 
   pyright:
@@ -25,7 +25,7 @@ jobs:
       - uses: actions/setup-python@v3
         with:
           python-version: "{{ python_version }}"
-      - run: bash .tooling/setup/cicd_setup.sh
+      - run: bash .tools/cicd_setup.sh
       - uses: actions/setup-node@v3.0.0
         with:
           node-version: 14
@@ -39,6 +39,6 @@ jobs:
       - uses: actions/setup-python@v3
         with:
           python-version: "{{ python_version }}"
-      - run: bash .tooling/setup/cicd_setup.sh
+      - run: bash .tools/cicd_setup.sh
       - run: pytest --cov
       - uses: codecov/codecov-action@v2.1.0
