--- a/copier.yml
+++ b/copier.yml
@@ -119,5 +119,5 @@ override_pytest:
 # * TASKS
 
 _tasks:
-  - [if, (!(Test-Path -Path .gitignore)), "{New-Item .gitignore}"]
+  - [pwsh, -Command, "if(!(Test-Path -Path .gitignore)){New-Item .gitignore}"]
   - [pwsh, .tools/scripts/merge_gitignore.ps1]
