--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -25,6 +25,7 @@
   "files.associations": {
     ".coveragerc": "ini",
     ".env": "dotenv",
+    ".gitignore_*": "ignore",
     ".pylintrc": "ini",
     "pyrightconfig.json": "jsonc",
     "*requirements*.txt": "pip-requirements",
