--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -3,17 +3,16 @@
 
   //* Experimental file nesting
   "explorer.sortOrder": "foldersNestsFiles",
-  "explorer.experimental.fileNesting.enabled": true,
-  "explorer.experimental.fileNesting.expand": false,
-  "explorer.experimental.fileNesting.operateAsGroup": false,
-  "explorer.experimental.fileNesting.patterns": {
+  "explorer.fileNesting.enabled": true,
+  "explorer.fileNesting.expand": false,
+  "explorer.fileNesting.patterns": {
     "*.ts": "${capture}.js",
     "*.js": "${capture}.js.map, ${capture}.min.js, ${capture}.d.ts",
     "*.jsx": "${capture}.js",
     "*.tsx": "${capture}.ts",
     "tsconfig.json": "tsconfig.*.json",
     "package.json": "package-lock.json, yarn.lock",
-    ".nest_tools_config": "{{ _copier_conf.answers_file }}.jinja, *{% endif %}.jinja, package.json",
+    ".nest_tools_config": "setup.ps1, update.ps1, {{ _copier_conf.answers_file }}.jinja, *{% endif %}.jinja, package.json",
     ".nest_md": "*.md, *.md.jinja, LICENSE.jinja"
   },
   "vsicons.associations.files": [
