--- a/copier.yml
+++ b/copier.yml
@@ -1,4 +1,4 @@
-_min_copier_version: "6.0.0b0"
+_min_copier_version: "6.0.0"
 
 _subdirectory: template
 
@@ -55,12 +55,6 @@ override:
 
 # Overrides
 
-override_vscode_settings:
-  when: "{{ override }}"
-  type: bool
-  help: "Override: .vscode/settings"
-  default: no
-
 override_vscode_extensions:
   when: "{{ override }}"
   type: bool
@@ -73,10 +67,22 @@ override_vscode_launch:
   help: "Override: .vscode/launch"
   default: no
 
+override_vscode_settings:
+  when: "{{ override }}"
+  type: bool
+  help: "Override: .vscode/settings"
+  default: no
+
 override_vscode_tasks:
   when: "{{ override }}"
   type: bool
   help: "Override: .vscode/tasks"
+  default: no
+
+override_codecov:
+  when: "{{ override }}"
+  type: bool
+  help: "Override: .codecov"
   default: no
 
 override_coveragerc:
@@ -101,6 +107,18 @@ override_gitattributes:
   when: "{{ override }}"
   type: bool
   help: "Override: .gitattributes"
+  default: no
+
+override_isort:
+  when: "{{ override }}"
+  type: bool
+  help: "Override: .isort.cfg"
+  default: no
+
+override_precommit:
+  when: "{{ override }}"
+  type: bool
+  help: "Override: pre-commit-config.yaml"
   default: no
 
 override_pyrightconfig:
