--- a/template/.tools/requirements/requirements_dev.txt
+++ b/template/.tools/requirements/requirements_dev.txt
@@ -11,6 +11,9 @@ black~=22.3.0  # doesn't follow semver
 # Lint
 flake8-codes~=0.2.0  # flake8 error code introspection
 
+# Pre-commit
+pre-commit~=2.19.0
+
 # For local publishing to PyPi with flit
 keyring~=23.5.0
 
