--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -8,10 +8,10 @@ updates:
     directory: "/"
     schedule:
       interval: "daily"
-#   - package-ecosystem: "github-actions"
-#     directory: "dependabot/.github/workflows"
-#     schedule:
-#       interval: "daily"
+  - package-ecosystem: "github-actions"
+    directory: "dependabot/.github/workflows"
+    schedule:
+      interval: "daily"
 #   - package-ecosystem: "github-actions"
 #     directory: "template/.github/workflows"
 #     schedule:
