--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -9,13 +9,13 @@ updates:
     schedule:
       interval: "daily"
   - package-ecosystem: "github-actions"
-    directory: "dependabot/.github/workflows/bump.yml"
+    directory: "dependabot"
     schedule:
       interval: "daily"
-#   - package-ecosystem: "github-actions"
-#     directory: "template/.github/workflows"
-#     schedule:
-#       interval: "daily"
+  - package-ecosystem: "github-actions"
+    directory: "template"
+    schedule:
+      interval: "daily"
   - package-ecosystem: "npm"
     directory: "template"
     schedule:
