--- a/.github/workflows/bump.yml
+++ b/.github/workflows/bump.yml
@@ -4,7 +4,7 @@ on:
   workflow_dispatch:
   push:
     branches: [main]
-    paths: [.github/template/**]
+    paths: [requirements.txt]
 
 jobs:
   bump:
@@ -13,8 +13,9 @@ jobs:
       - uses: actions/checkout@v3
       - uses: actions/setup-python@v3
         with:
-          python-version: "3.10"
-      - run: python bump.py
-      - uses: stefanzweifel/git-auto-commit-action@v4.14.1
+          python-version: "{{ python_version }}"
+      - run: pip install -U pip setuptools wheel -r .tools/requirements/requirements_cicd.txt
+      - run: python .tools/scripts/bump_pyproject.py
+      - uses: stefanzweifel/git-auto-commit-action@v4.14.0
         with:
-          commit_message: Bump dependencies
+          commit_message: Bump `pyproject.toml` dependencies
