--- a/.github/workflows/changerelease.yml
+++ b/.github/workflows/changerelease.yml
@@ -12,5 +12,5 @@ jobs:
     steps:
       - uses: dropseed/changerelease@v1
         with:
-          github_token: ${{ secrets.GITHUB_TOKEN }}
+          github_token: secrets.GITHUB_TOKEN
           tag_prefix: ""
