--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -14,7 +14,7 @@ jobs:
       - uses: actions/checkout@v3
       - uses: actions/setup-python@v3
         with:
-          python-version: "{{ python_version }}"
+          python-version: "python_version"
       - run: bash .tools/scripts/cicd_setup.sh
       - run: flake8
 
@@ -24,7 +24,7 @@ jobs:
       - uses: actions/checkout@v3
       - uses: actions/setup-python@v3
         with:
-          python-version: "{{ python_version }}"
+          python-version: "python_version"
       - run: bash .tools/scripts/cicd_setup.sh
       - uses: actions/setup-node@v3.0.0
         with:
@@ -38,7 +38,7 @@ jobs:
       - uses: actions/checkout@v3
       - uses: actions/setup-python@v3
         with:
-          python-version: "{{ python_version }}"
+          python-version: "python_version"
       - run: bash .tools/scripts/cicd_setup.sh
       - run: pytest --cov
       - uses: codecov/codecov-action@v2.1.0
