--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -11,10 +11,10 @@ jobs:
       - uses: actions/checkout@v3
       - uses: actions/setup-python@v3
         with:
-          python-version: "{{ python_version }}"
+          python-version: "python_version"
       - run: bash .tools/scripts/cicd_setup.sh
       - name: publish
         env:
           FLIT_USERNAME: __token__
-          FLIT_PASSWORD: "{% raw %}${{ secrets.PYPI_TOKEN }}{% endraw %}"
+          FLIT_PASSWORD: "secrets.PYPI_TOKEN"
         run: flit publish
