--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -8,6 +8,10 @@ updates:
     directory: "/"
     schedule:
       interval: "daily"
+  - package-ecosystem: "github-actions"
+    directory: "template_workflows"
+    schedule:
+      interval: "daily"
   - package-ecosystem: "npm"
     directory: "template"
     schedule:
