--- a/.github/workflows/bump.yml
+++ b/.github/workflows/bump.yml
@@ -13,7 +13,7 @@ jobs:
       - uses: actions/checkout@v3
       - uses: actions/setup-python@v3
         with:
-          python-version: "python_version"
+          python-version:
       - run: pip install -U pip setuptools wheel -r .tools/requirements/requirements_cicd.txt
       - run: python .tools/scripts/bump_pyproject.py
       - uses: stefanzweifel/git-auto-commit-action@v4.14.1
