--- a/template/.gitignore
+++ b/template/.gitignore
@@ -1,16 +1,21 @@
 # * -------------------------------------------------------------------------------- * #
 # * PROJECT-SPECIFIC
 
+# Be sure to override .gitignore in the template questions before putting anything here.
 
 # * -------------------------------------------------------------------------------- * #
-# * TEMPLATE
+# * TEMPLATE-SPECIFIC
 # *
-# * Changes here will be overwritten by Copier; NEVER EDIT MANUALLY
-#[[
-#]]
 
+# To avoid committing rejected changes upon bumping template
+*.rej
+# Only needed in dev environments
+pythonrc.py
+.nest_*
 # Don't commit this duplicate of our answers. It's only used once on project creation.
 .copier-answers-init.yml
+# Don't commit code workspace files, which might be symlinked here
+*.code-workspace
 
 # * -------------------------------------------------------------------------------- * #
 # * Partial Node.gitignore
