--- a/.gitignore
+++ b/.gitignore
@@ -82,7 +82,9 @@ target/
 .ipynb_checkpoints
 
 # IPython
-profile_default/
+.ipython/profile_default/*
+!.ipython/profile_default/startup/
+.ipython/profile_default/startup/README
 ipython_config.py
 
 # pyenv
