--- a/copier.yml
+++ b/copier.yml
@@ -60,6 +60,12 @@ override:
 
 # Overrides
 
+override_update:
+  when: "{{ override }}"
+  type: bool
+  help: "Override: update.ps1"
+  default: no
+
 override_vscode_extensions:
   when: "{{ override }}"
   type: bool
