--- a/renovate.json
+++ b/renovate.json
@@ -1,6 +1,11 @@
 {
   "$schema": "https://docs.renovatebot.com/renovate-schema.json",
-  "extends": [
-    "config:base"
+  "extends": ["config:base"],
+  "packageRules": [
+    {
+      "groupName": "bump_workflows",
+      "matchFiles": [".github/workflows/bump_workflows.yml"],
+      "matchPackagePatterns": ["*"]
+    }
   ]
 }
