--- a/renovate.json
+++ b/renovate.json
@@ -5,7 +5,7 @@
     {
       "groupName": "bump_workflows",
       "matchFiles": [".github/workflows/bump_workflows.yml"],
-      "matchPackagePatterns": ["*"]
+      "matchPackagePatterns": [".*"]
     }
   ]
 }
