--- a/renovate.json
+++ b/renovate.json
@@ -8,7 +8,8 @@
       "matchPackagePatterns": [
         "stefanzweifel/git-auto-commit-action",
         "actions/checkout"
-      ]
+      ],
+      "separateMajorMinor": false
     }
   ]
 }
