--- a/renovate.json
+++ b/renovate.json
@@ -4,10 +4,36 @@
   "automerge": true,
   "packageRules": [
     {
-      "groupName": "bump_workflows.yml",
+      "groupName": ".github/workflows/bump_workflows.yml",
       "matchFiles": [".github/workflows/bump_workflows.yml"],
-      "matchPackagePatterns": [".*"],
-      "separateMajorMinor": false
+      "matchPackagePatterns": [".*"]
+    },
+    {
+      "groupName": ".github/workflows/<except bump_workflows.yml>",
+      "matchFiles": [
+        ".github/workflows/bump.yml",
+        ".github/workflows/changerelease.yml",
+        ".github/workflows/codeql-analysis.yml",
+        ".github/workflows/main.yml",
+        ".github/workflows/publish.yml"
+      ],
+      "matchPackagePatterns": [".*"]
+    },
+    {
+      "groupName": ".github/workflows/<except bump_workflows.yml>",
+      "matchFiles": [
+        ".github/workflows/bump.yml",
+        ".github/workflows/changerelease.yml",
+        ".github/workflows/codeql-analysis.yml",
+        ".github/workflows/main.yml",
+        ".github/workflows/publish.yml"
+      ],
+      "matchPackagePatterns": [".*"]
+    },
+    {
+      "groupName": "template/.tools/requirements/*",
+      "matchPaths": ["template/.tools/requirements/*"],
+      "matchPackagePatterns": [".*"]
     }
   ]
 }
