--- a/renovate.json
+++ b/renovate.json
@@ -36,7 +36,11 @@
     },
     {
       "groupName": "template/.tools/requirements/*",
-      "matchPaths": ["template/.tools/requirements"],
+      "matchFiles": [
+        "template/.tools/requirements/requirements_both.txt",
+        "template/.tools/requirements/requirements_cicd.txt",
+        "template/.tools/requirements/requirements_dev.txt"
+      ],
       "matchPackagePatterns": [".*"]
     }
   ]
