--- a/template/renovate.json
+++ b/template/renovate.json
@@ -1,6 +1,6 @@
 {
   "$schema": "https://docs.renovatebot.com/renovate-schema.json",
-  "extends": ["config:base", ":preserveSemverRanges", "group:all"],
+  "extends": ["config:base", ":preserveSemverRanges", "group:allNonMajor"],
   "automerge": true,
   "enabledManagers": ["pip_requirements", "poetry", "pre-commit"],
   "packageRules": [
