--- a/.github/workflows/bump_precommit.yml
+++ b/.github/workflows/bump_precommit.yml
@@ -1,10 +1,10 @@
-name: bump_workflows
+name: bump_precommit
 
 on:
   workflow_dispatch:
   push:
     branches: [main]
-    paths: [bump/workflows/*]
+    paths: [bump/pre-commit-config.yaml]
 
 jobs:
   bump:
@@ -14,7 +14,7 @@ jobs:
       - uses: actions/setup-python@v4
         with:
           python-version: "3.10"
-      - run: python bump/workflows.py
+      - run: python/precommit.py
       - uses: stefanzweifel/git-auto-commit-action@v4.14.1
         with:
           commit_message: Bump dependencies
