--- a/renovate.json
+++ b/renovate.json
@@ -21,9 +21,8 @@
       "matchFiles": [".github/workflows/bump_workflows.yml"]
     },
     {
-      "groupName": ".github/workflows/<all except bump_workflows.yml>",
-      "matchPaths": [".github/workflows"],
-      "ignorePaths": [".github/workflows/bump_workflows.yml"]
+      "groupName": "bump/workflows",
+      "matchPaths": ["bump/workflows"]
     },
     {
       "groupName": "template/.tools/requirements",
