--- a/.github/workflows/bump_precommit.yml
+++ b/.github/workflows/bump_precommit.yml
@@ -14,7 +14,7 @@ jobs:
       - uses: actions/setup-python@v4
         with:
           python-version: "3.10"
-      - run: python/precommit.py
+      - run: python bump/precommit.py
       - uses: stefanzweifel/git-auto-commit-action@v4.14.1
         with:
           commit_message: Bump dependencies
