--- a/renovate.json
+++ b/renovate.json
@@ -34,9 +34,7 @@
     },
     {
       "groupName": "template/pre-commit-config.yaml",
-      "matchFiles": [
-        "template/{% if not override_precommit %}.pre-commit-config.yaml{% endif %}.jinja"
-      ]
+      "matchFiles": ["bump/pre-commit-config.yaml"]
     }
   ]
 }
