--- a/.github/workflows/bump_precommit.yml
+++ b/.github/workflows/bump_precommit.yml
@@ -4,7 +4,7 @@ on:
   workflow_dispatch:
   push:
     branches: [main]
-    paths: [bump/pre-commit-config.yaml]
+    paths: [bump/.pre-commit-config.yaml]
 
 jobs:
   bump:
