--- a/.github/workflows/renovate_automerge.yml
+++ b/.github/workflows/renovate_automerge.yml
@@ -1,3 +1,5 @@
+name: renovate_automerge
+
 on:
   pull_request:
     branches: ["main"]
@@ -5,3 +7,5 @@ on:
 jobs:
   job:
     runs-on: ubuntu-20.04
+    steps:
+      - run: "echo 'I am just here to get Renovate to automerge'"
