--- a/template/.tools/requirements/requirements_both.txt
+++ b/template/.tools/requirements/requirements_both.txt
@@ -10,6 +10,9 @@ flit~=3.8.0
 # Type checking
 pyright==1.1.278
 
+# Type checking dependencies
+IPython~=8.3.0
+
 # Lint
 flake8~=5.0.4
 flake8-absolute-import~=1.0.0.1
