Propagate changes back to this template

--- a/copier.yml
+++ b/copier.yml
@@ -138,6 +138,12 @@ override_isort:
   help: "Override: .isort.cfg"
   default: no
 
+override_markdownlint:
+  when: "{{ override }}"
+  type: bool
+  help: "Override: .markdownlint.yaml"
+  default: no
+
 override_precommit:
   when: "{{ override }}"
   type: bool
