--- a/bump/.pre-commit-config.yaml
+++ b/bump/.pre-commit-config.yaml
@@ -45,7 +45,7 @@ repos:
     rev: "v3.3.1"
     hooks:
       - id: pyupgrade
-        args: [--py310-plus]
+        args: [--py3##-plus]
   - repo: https://github.com/asottile/blacken-docs
     rev: "v1.12.1"
     hooks:
